--- a/index.html
+++ b/index.html
@@ -283,59 +283,12 @@
       }
 
       document.getElementById('loadGraph').addEventListener('click', (e) => {
-        // let yAxisOption = COUNT;
-
         let lowerDataBound = BOUNDS.low;
         let upperDataBound = BOUNDS.high;
 
-        // if (document.getElementById('count-option').checked) {
-        //   yAxisOption = COUNT;
-        // } else if (document.getElementById('log-option').checked) {
-        //   yAxisOption = LOG;
-        // } else if (document.getElementById('proportion-option').checked) {
-        //   yAxisOption = PROPORTION;
-        // }
-
         lowerDataBound = parseInt(document.getElementById('lower-bound').value);
-        upperDataBound =
-          parseInt(document.getElementById('upper-bound').value) + 1;
-
-        // vega.scheme('strands', [
-        //   COLORS.A,
-        //   COLORS.C,
-        //   COLORS.G,
-        //   COLORS.T,
-        //   COLORS.N
-        // ]);
-
-        // added
+        upperDataBound = parseInt(document.getElementById('upper-bound').value) + 1;
         loadSBV(lowerDataBound, upperDataBound, tsvDataCount, tsvDataProp);
-
-        // if (yAxisOption == COUNT) {
-        //   loadBarGraph(
-        //     tsvDataCount.slice(
-        //       lowerDataBound * DATA_PER_POS,
-        //       upperDataBound * DATA_PER_POS
-        //     ),
-        //     yAxisOption
-        //   );
-        // } else if (yAxisOption == LOG) {
-        //   loadBarGraph(
-        //     tsvDataCount.slice(
-        //       lowerDataBound * DATA_PER_POS,
-        //       upperDataBound * DATA_PER_POS
-        //     ),
-        //     yAxisOption
-        //   );
-        // } else if (yAxisOption == PROPORTION) {
-        //   loadBarGraph(
-        //     tsvDataProp.slice(
-        //       lowerDataBound * DATA_PER_POS,
-        //       upperDataBound * DATA_PER_POS
-        //     ),
-        //     yAxisOption
-        //   );
-        // }
       });
     </script>
   </body>
