Clean up directories pt. 1

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
       </div>
     </div>
 
-    <script src="d3.v7.min.js"></script>
-    <script src="vega@5.js"></script>
-    <script src="vega-lite@5.js"></script>
-    <script src="vega-embed@6.js"></script>
+    <script src="vega/d3.v7.min.js"></script>
+    <script src="vega/vega@5.js"></script>
+    <script src="vega/vega-lite@5.js"></script>
+    <script src="vega/vega-embed@6.js"></script>
 
     <script src="init.js"></script>
     <script src="tsv-loader-vega.js"></script>
