Organized code, added edge cases

--- a/index.html
+++ b/index.html
@@ -1,61 +1,7 @@
 <html>
   <head>
     <title>SamBamViz VIZualizer</title>
-    <style>
-      body {
-        font-family: 'Helvetica', 'Arial', sans-serif;
-        color: #444444;
-        background-color: hsl(0, 0%, 98%);
-      }
-
-      #layout {
-        display: grid;
-        grid-template-columns: 20% 80%;
-        width: 100%;
-        height: 100%;
-      }
-
-      #options {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 0 2vw;
-        background-color: #eee;
-        font-size: 0.8em;
-      }
-
-      #graph {
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        padding: 0vw 3vw;
-      }
-
-      #view {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        padding: 0vw 3vw;
-      }
-
-      #color-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        text-align: right;
-      }
-
-      #color-grid > label {
-        padding-left: 10px;
-        padding-right: 10px;
-        margin-top: auto;
-        margin-bottom: auto;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="layout">
@@ -65,10 +11,9 @@
         <label>Upload SamBamViz File:</label>
         <input type="file" id="sambamviz-upload" />
         <br />
-        <br />
         <label>Upload FASTA File:</label>
         <input type="file" id="fasta-upload" />
-        <br /><br />
+        <br />
         <button id="upload-files">Upload Files</button>
         <h3>Color Picker</h3>
         <div id="color-grid">
@@ -130,6 +75,12 @@
         </div>
         <br />
         <button id="loadGraph">Load SamBamViz</button>
+        <br />
+        <div id="info">
+          Hover over the graph, and click on the circular button with 3
+          horizontal dots in the top right corner. To export, you can save as
+          SVG or PNG.
+        </div>
       </div>
       <div id="graph">
         <div id="view"></div>
@@ -144,152 +95,6 @@
     <script src="init.js"></script>
     <script src="tsv-loader-vega.js"></script>
     <script src="bar-chart.js"></script>
-
-    <script type="text/javascript">
-      document.getElementById('upload-files').addEventListener('click', (e) => {
-        generateData();
-
-        let lowerDataBound = BOUNDS.low;
-        let upperDataBound = BOUNDS.high;
-        loadSBV(lowerDataBound, upperDataBound, tsvDataCount, tsvDataProp);
-      });
-
-      document
-        .getElementById('sambamviz-upload')
-        .addEventListener('change', (e) => {
-          processFiles(SBV);
-        });
-
-      document
-        .getElementById('fasta-upload')
-        .addEventListener('change', (e) => {
-          processFiles(FAS);
-        });
-
-      async function generateData() {
-        try {
-          await tsvToArr(tsvString);
-        } catch (error) {
-          console.log(error);
-        }
-      }
-
-      async function processFiles(fileType) {
-        try {
-          if (fileType === SBV) {
-            const sbvFile =
-              document.getElementById('sambamviz-upload').files[0];
-            await processSamBamViz(sbvFile);
-          }
-
-          if (fileType === FAS) {
-            const fasFile = document.getElementById('fasta-upload').files[0];
-            await processFasta(fasFile);
-          }
-        } catch (error) {
-          console.log(error);
-        }
-      }
-
-      function processSamBamViz(file) {
-        return new Promise((resolve, reject) => {
-          let reader = new FileReader();
-
-          reader.onload = () => {
-            tsvString = reader.result;
-            resolve('done');
-          };
-
-          reader.readAsText(file);
-        });
-      }
-
-      function processFasta(file) {
-        return new Promise((resolve, reject) => {
-          let reader = new FileReader();
-
-          reader.onload = () => {
-            genSeq = [];
-            let genSeqStr = reader.result;
-            for (
-              let i = genSeqStr.indexOf('\n') + 1;
-              i < genSeqStr.length;
-              i++
-            ) {
-              if (genSeqStr[i] != '\n') {
-                genSeq.push(genSeqStr[i]);
-              }
-            }
-            resolve('done');
-          };
-
-          reader.readAsText(file);
-        });
-      }
-
-      function setVegaScheme() {
-        COLORS.A = document.getElementById('a-color').value;
-        COLORS.C = document.getElementById('c-color').value;
-        COLORS.G = document.getElementById('g-color').value;
-        COLORS.T = document.getElementById('t-color').value;
-        COLORS.N = document.getElementById('n-color').value;
-      }
-
-      document.querySelectorAll('.color-picker').forEach((input) => {
-        input.addEventListener('change', (e) => {
-          setVegaScheme();
-        });
-      });
-
-      function loadSBV(lowerDataBound, upperDataBound, tsvData, tsvDataProp) {
-        vega.scheme('strands', [
-          COLORS.A,
-          COLORS.C,
-          COLORS.G,
-          COLORS.T,
-          COLORS.N
-        ]);
-
-        let data = tsvData.slice(
-          lowerDataBound * DATA_PER_POS,
-          upperDataBound * DATA_PER_POS
-        );
-
-        if (document.getElementById('count-option').checked) {
-          loadBarGraph(
-            tsvData.slice(
-              lowerDataBound * DATA_PER_POS,
-              upperDataBound * DATA_PER_POS
-            ),
-            COUNT
-          );
-        } else if (document.getElementById('log-option').checked) {
-          loadBarGraph(
-            tsvData.slice(
-              lowerDataBound * DATA_PER_POS,
-              upperDataBound * DATA_PER_POS
-            ),
-            LOG
-          );
-        } else if (document.getElementById('proportion-option').checked) {
-          loadBarGraph(
-            tsvDataProp.slice(
-              lowerDataBound * DATA_PER_POS,
-              upperDataBound * DATA_PER_POS
-            ),
-            PROPORTION
-          );
-        }
-      }
-
-      document.getElementById('loadGraph').addEventListener('click', (e) => {
-        let lowerDataBound = BOUNDS.low;
-        let upperDataBound = BOUNDS.high;
-
-        lowerDataBound = parseInt(document.getElementById('lower-bound').value);
-        upperDataBound = parseInt(document.getElementById('upper-bound').value) + 1;
-        loadSBV(lowerDataBound, upperDataBound, tsvDataCount, tsvDataProp);
-      });
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
