--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <input type="number" id="upper-bound" min="0" max="0" />
         </div>
         <br />
-        <button id="load-graph">Update SamBamViz</button>
+        <button id="update-graph">Update SamBamViz</button>
         <br />
         <div id="info-box">
           <div>
