--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       <div id="options">
         <h1>SamBamViz</h1>
         <h3>File Select</h3>
-        <label>Select SamBamViz File:</label>
+        <label>Select SamBamViz File: <span class="important">*</span></label>
         <input type="file" id="sambamviz-load" />
         <br />
-        <label>Select FASTA File:</label>
+        <label>Select Reference FASTA File:</label>
         <input type="file" id="fasta-load" />
         <br />
         <button id="load-files">Load SamBamViz</button>
